Fixed some spacing in the code

--- a/src/sass/components/_posts-lists.scss
+++ b/src/sass/components/_posts-lists.scss
@@ -7,13 +7,6 @@
   flex-direction: column;
   gap: 10%;
 
-  h3 {
-    a {
-      font-size: inherit;
-      border-bottom: 2px dashed $neon-blue;
-    }
-  }
-
   p {
     margin-bottom: 0.5rem;
   }
